ansible/files/ocp/glance/3/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: glance
  namespace: openstack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: glance
  template:
    metadata:
      labels:
        app: glance
      namespace: openstack
    spec:
      serviceAccountName: openstack-proto
      containers:
        - name: glance-kolla
          image: tripleotrain/rhel-binary-glance-api:current-tripleo
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - mountPath: /var/lib/config-data
              readOnly: true
              name: config-data
            - mountPath: /var/lib/kolla/config_files
              readOnly: true
              name: kolla-config
            - mountPath: /var/lib/glance
              name: filestore
      volumes:
        - name: kolla-config
          configMap:
            name: glance
            items:
              - key: kolla-config.json
                path: config.json
        - name: config-data
          configMap:
            name: glance
            defaultMode: 0644
            items:
              - key: glance-api.conf
                path: glance-api.conf
              - key: logging.conf
                path: logging.conf
        - name: filestore
          persistentVolumeClaim:
            claimName: glance-filestore
