ansible/files/ocp/glance/3/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: glance
  name: glance
  namespace: openstack
spec:
  ports:
  - name: api
    port: 9292
    protocol: TCP
  selector:
    app: glance
  type: ClusterIP
